docs: 重构文档目录结构，按类别分组整理
- 新增 architecture/ 目录：后端/前端架构文档
- 新增 api/ 目录：API 设计规范和接口清单
- 新增 database/ 目录：数据库表结构详情
- 新增 guide/ 目录：开发指南和运行配置
- 新增 CHANGELOG.md：版本变更日志
- 删除已拆分的 api-design.md 和 idea-encoding-fix.md